tests/paczka1/fuzzy1/88883952.err
Error in line 7: NcCCv4y A180 12,1
Error in line 13: NcCCv4y S977 44,7
Error in line 14: LmE A601 84,5
Error in line 19: LmE A180 78,5
Error in line 20: LmE A601 32,0
Error in line 34: 7pkvXlXEO1 A601 13,3
